Security fix: Move Azure Storage credentials to configuration

--- a/Fluxion_Lab/appsettings.json
+++ b/Fluxion_Lab/appsettings.json
@@ -8,13 +8,13 @@
   "AllowedHosts": "*",
   "XApikey": "pgH7QzFHJx4w46f#@k*U*I~5Uzi4RvtTwlExp~67@@##*FS",
   "SaaSOptions": {
-    "Mode": "SaaS" // or "OnPrem -SaaS "
+    "Mode": "OnPrem" // or "OnPrem -SaaS "
   },
   "ConnectionStrings": {
     "MySqlConnection": "Server=localhost;Port=3306;Database=family;User=root;Password=1234;"
   },
   "AzureStorage": {
-    "ConnectionString": "YOUR_AZURE_STORAGE_CONNECTION_STRING_HERE",
+    "ConnectionString": "REPLACE_WITH_YOUR_AZURE_STORAGE_CONNECTION_STRING",
     "ContainerName": "fluxion",
     "QueueName": "fluxion-data-sync"
   },
